--- a/src/helper/GraphView/Queue.css
+++ b/src/helper/GraphView/Queue.css
@@ -1,109 +1,121 @@
-.queueView{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.queueView {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
 
-    width:200px;
-    height:fit-content;
-    font-family: 'Roboto', sans-serif;
+  width: 200px;
+  /* max-height: 500px; */
+  /* height: fit-content; */
+  height: 500px;
+  font-family: "Roboto", sans-serif;
+  overflow-y: auto;
 
-    background-color: #e9e9e9;
-    border-radius: 10px;
+  /* background-color: #e9e9e9; */
+  border-radius: 10px;
 
-    padding-bottom:14px;
+  padding-bottom: 14px;
 
-    margin-top: 20px
+  margin-top: 5px;
 }
 
-.queueTitle{
-    width: 200px;
-    height: 44px;
-    line-height: 44px;
-    margin-bottom:4px;
-    background-color: transparent;
-    border-bottom: 2px solid #232323;
-    color: #232323;
+.queueTitle {
+  width: 200px;
+  height: 44px;
+  line-height: 44px;
+  /* margin-bottom: 4px; */
+  background-color: transparent;
+  /* border-bottom: 2px solid #232323; */
+  color: #232323;
 
-    font-size: 24px;
-    font-weight: 900;
+  font-size: 18px;
+  font-weight: 900;
+  font-family: "Roboto", sans-serif;
 
-    text-align: center;
+  text-align: center;
+
+  background-color: #e2e2e2;
+
+  border-radius: 10px 10px 0 0;
 }
 
-.queueMirror{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.queueMirror {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
-    width:200px;
-    height:10px;
-    background-color: transparent;
+  width: 200px;
+  height: 10px;
+  background-color: transparent;
 }
 
-.queueViewItem{
-    width:150px;
-    height:30px;
-    border-top: 1px solid #232323;
-    border-bottom: 1px solid #232323;
-    background-color: #e9e9e9;
+.queueViewItem {
+  width: calc(100% - 20px);
+  height: 30px;
+  border-top: 1px solid #232323;
+  /* border-bottom: 1px solid #232323; */
+  background-color: #c9c9c9;
 
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items:center;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 
-    margin-top:7px;
+  padding: 5px 10px;
+
+  transition: 0.5s;
 }
 
-.queueViewItem:hover{
-    background-color: #a9a9a9;
+.queueViewItem:hover {
+  background-color: #a9a9a9;
 }
 
-.queueViewItemInd{
-    width:36px;
-    height:30px;
-    line-height: 30px;
-    border-radius: 50%;
-    /* box-shadow: 0 0 0 2px inset #232323; */
-    background-color: #e9e9e9;
-    color: #454545;
-    
-    font-size: 16px;
-    font-weight: 700;
-    text-align: center;
-    text-decoration: none;
+.queueViewItemInd {
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  border-radius: 50%;
+  /* box-shadow: 0 0 0 2px inset #232323; */
+  background-color: #777777;
+  color: #d9d9d9;
+
+  font-size: 10px;
+  font-weight: 900;
+  text-align: center;
+  text-decoration: none;
+
+  margin: 0 3px;
 }
 
-.queueViewItemNode{
-    width:24px;
-    height:24px;
-    margin: 1px 0;
-    border-radius: 50%;
-    box-shadow: 0 0 0 1px inset #232323;
-    background-color: #e9e9e9;
-    color: #e9e9e9;
+.queueViewItemNode {
+  width: 24px;
+  height: 24px;
+  margin: 1px 0;
+  border-radius: 50%;
+  box-shadow: 0 0 0 1px inset #232323;
+  background-color: #e9e9e9;
+  color: #e1e1e1;
 
-    font-size: 11px;
-    font-weight: 900;
-    line-height: 24px;
-    text-align: center;
-    text-decoration: none;
+  font-size: 9px;
+  font-weight: 900;
+  line-height: 24px;
+  text-align: center;
+  text-decoration: none;
 }
 
-.queueViewItemEdge{
-    width:30px;
-    height:8px;
-    margin-bottom: 8px;
-    border-radius: 2px;
-    background-color:transparent;
-    border-bottom: 2px solid #232323;
-    color:#232323;
+.queueViewItemEdge {
+  width: 30px;
+  height: 8px;
+  margin-bottom: 8px;
+  border-radius: 2px;
+  background-color: transparent;
+  border-bottom: 2px solid #232323;
+  color: #232323;
 
-    font-size: 11px;
-    font-weight: 700;
-    line-height: 7px;
-    text-align: center;
-    text-decoration: none;
+  font-size: 11px;
+  font-weight: 700;
+  line-height: 7px;
+  text-align: center;
+  text-decoration: none;
 }
