--- a/src/pages/Header.css
+++ b/src/pages/Header.css
@@ -1,140 +1,142 @@
-body{
-    overflow:hidden;
+body {
+  overflow: hidden;
 }
 
-.header{
-    background-color: #222222;
-    height:100vh;
-    z-index:20;
-    position:relative;
+.header {
+  background-color: #222222;
+  height: 100vh;
+  z-index: 20;
+  position: relative;
 }
 
-.headerTitle{
-    width:100%;
-    height:70px;
-    line-height:80px;
-    font-size: 26px;
-    font-weight: 900;
-    text-align: center;
-    color:#d9d9d9;
-    background-color: #111111;
+.headerTitle {
+  width: 100%;
+  height: 70px;
+  line-height: 80px;
+  font-size: 26px;
+  font-weight: 900;
+  text-align: center;
+  color: #d9d9d9;
+  background-color: #111111;
 }
 
-.headerNavMenu{
-    display:flex;
-    justify-content: start;
-    align-items: center;
-    width:150vw;
-    /* transform: trasnlateX(-10vw); */
-    height:50px;
-    padding-left:50px;
-    /* padding-top:10px;
+.headerNavMenu {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 150vw;
+  /* transform: trasnlateX(-10vw); */
+  height: 40px;
+  padding-left: 50px;
+  /* padding-top:10px;
     padding-bottom:10px; */
-    background-color: #444444;
-    box-shadow: -10vw 0 7px 1px inset #eeeeee;
+  background-color: #444444;
+  box-shadow: -10vw 0 7px 1px inset #797979;
 }
 
-.headerNavItem{
-    width:fit-content;
-    padding: 0 30px;
-    /* height:fit-content; */
-    height:50px;
-    line-height:50px;
-    font-size: 16px;
-    font-weight: 700;
-    color:#222222;
-    text-align: center;
-    text-decoration: none;
-    margin-right: 20px;
-    background-color: #999999;
-    /* padding:10px 0; */
+.headerNavItem {
+  width: 160px;
+  /* padding: 0 30px; */
+  /* height:fit-content; */
+  /* height: 40px; */
+  height: 100%;
+  line-height: 40px;
+  font-size: 14px;
+  font-weight: 900;
+  color: #222222;
+  text-align: center;
+  text-decoration: none;
+  margin-right: 40px;
+  background-color: #999999;
+  /* padding:10px 0; */
 
-    position:relative;
-    display:block;
-    z-index:40;
-    pointer-events: all;
+  position: relative;
+  display: block;
+  z-index: 40;
+  pointer-events: all;
 
-    box-shadow: 1px 0 12px 4px #232323;
+  transition: 0.3s;
+
+  box-shadow: 1px 0 12px 4px #232323;
 }
 
-.headerNavItem:hover{
-    background-color: #cccccc;
-    box-shadow: 3px 0 12px 4px #232323;
-    /* font-size: 18px; */
-    font-weight: 900;
+.headerNavItem.small {
+  font-size: 12px;
 }
 
-
-.headerMenu{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* width:1200px; */
-    width:100%;
-    padding: 0 50px;
-    height:50px;
-    background-color: #787878;
-    border: 2px solid #232323;
-    margin: 20px auto 10px auto;
-
-    font-size: 24px;
-    font-weight: 900;
-    color: #e9e9e9;
-
-    box-shadow: 0 0 10px 1px inset #232323;
-
-    gap: 10px;
+.headerNavItem:hover {
+  background-color: #cccccc;
+  box-shadow: 12px 0 12px 4px #232323;
 }
 
-.headerMenuItem{
-    width: 120px;
-    height: 44px;
-    border-radius: 10px;
-    margin:0;
-    background-color: #e9e9e9;
-    text-align:center;
-    border: 2px solid #232323;
-    font-size: 12px;
-    font-weight:900;
-    line-height:34px;
-    text-decoration: none;
-    
-    padding:0;
-    outline:none;
+.headerMenu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* width:1200px; */
+  width: 100%;
+  padding: 0 50px;
+  height: 50px;
+  background-color: #787878;
+  border: 2px solid #232323;
+  margin: 20px auto 10px auto;
 
-    font-family: 'Roboto', sans-serif;
-    color: #232323;
-    margin:0;
+  font-size: 24px;
+  font-weight: 900;
+  color: #e9e9e9;
+
+  box-shadow: 0 0 10px 1px inset #232323;
+
+  gap: 10px;
 }
 
-.headerMenuItem:hover{
-    background-color: #a9a9a9;
+.headerMenuItem {
+  width: 120px;
+  height: 44px;
+  border-radius: 10px;
+  margin: 0;
+  background-color: #e9e9e9;
+  text-align: center;
+  border: 2px solid #232323;
+  font-size: 12px;
+  font-weight: 900;
+  line-height: 34px;
+  text-decoration: none;
+
+  padding: 0;
+  outline: none;
+
+  font-family: "Roboto", sans-serif;
+  color: #232323;
+  margin: 0;
 }
 
-.headerMenuItem:active{
-    background-color: #888888;
+.headerMenuItem:hover {
+  background-color: #a9a9a9;
 }
 
-.headerMenuItem.headerMenuItemActive{
-    background-color:#6fb26f;
+.headerMenuItem:active {
+  background-color: #888888;
 }
 
-.headerMenuItem.headerMenuItemActive:hover{
-    background-color:#6fb26f;
+.headerMenuItem.headerMenuItemActive {
+  background-color: #6fb26f;
 }
 
-.headerMenuItem.headerMenuItemInActive{
-    background-color: #777777;
-    color:#444444;
-    pointer-events:none;
-    border: 2px solid #444444;
+.headerMenuItem.headerMenuItemActive:hover {
+  background-color: #6fb26f;
 }
 
-.headerGraph{
-    display:flex;
-    justify-content: space-around;
+.headerMenuItem.headerMenuItemInActive {
+  background-color: #777777;
+  color: #444444;
+  pointer-events: none;
+  border: 2px solid #444444;
+}
 
-    width:100%;
+.headerGraph {
+  display: flex;
+  justify-content: space-around;
 
-
+  width: 100%;
 }
